Registro de vendedor

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,8 +11,16 @@
 
     <string name="op_mis_productos_v">Mis productos</string>
     <string name="op_mis_ordenes_v">Ordenes</string>
-    
+
     <string name="txt_bienvenida">Bienvenido(a)</string>
+
+    <!--REGISTO DE VENDEDOR-->
+    <string name="txtRegistroV">Registro de vendedor</string>
+    <string name="etNombresV">Nombres completos</string>
+    <string name="etEmailV">Email</string>
+    <string name="etPassword">Password</string>
+    <string name="etCPassword">Confirmar password</string>
+    <string name="btnRegistrarV">Registrarme</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
