Arreglo de bugs y errores implemntacion login usuario

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,16 +29,29 @@
     <!--REGISTO DE VENDEDOR-->
     <string name="txtRegistroV">Registro de vendedor</string>
     <string name="etNombresV">Nombres completos</string>
-    <string name="etEmailV">Email</string>
+    <string name="etEmail">Email</string>
     <string name="etPassword">Password</string>
     <string name="etCPassword">Confirmar password</string>
     <string name="btnRegistrarV">Registrarme</string>
+
+    <!--REGISTO DE CLIENTES-->
+    <string name="txtRegistroC">Registro de cliente</string>
+    <string name="etNombresC">Nombres completos</string>
+    <string name="btnRegistrarC">Registrar</string>
 
     <!-- LOGIN VENDEDOR -->
     <string name="txtloginV">Login de vendedor</string>
     <string name="btnLoginV">Ingresar</string>
     <string name="txtnoCuenta">¿No tienes una cuenta?</string>
     <string name="tvRegistrarV">Regístrarme</string>
+
+    <!-- LOGIN VENDEDOR -->
+    <string name="txtLoginC">Login de cliente</string>
+    <string name="btnLoginC">Ingresar</string>
+    <string name="tvRegistrarC">Registrarme</string>
+    <string name="txtNoCuenta">¿No tienes una cuenta?</string>
+
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
