--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <!--NavigationDrawer Vendedor-->
     <string name="op_inicio_v">Inicio</string>
     <string name="op_mi_tienda_v">Mi tienda</string>
+    <string name="op_categorias_v">Categorias</string>
     <string name="op_resenia_v">Reseñas</string>
     <string name="op_cerrar_sesion_v">Cerrar</string>
 
@@ -64,6 +65,11 @@
     <string name="etPrecioConDescuentoP">Precio con descuento apli.</string>
     <string name="etNotaDescuentoP">Ejm: 10% Desc.</string>
     <string name="btnAgregarProducto">Agregar producto</string>
+    
+    <!-- Agregar categorias -->
+    <string name="etCategoria">Ingrese categoria</string>
+    <string name="btnAgregarCat">Agregar categoria</string>
+    
 
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
